workspace listing pre after checkout

--- a/.github/workflows/showcase.yml
+++ b/.github/workflows/showcase.yml
@@ -23,3 +23,11 @@ jobs:
           docker -v
           node -v
           java -version
+          
+      - name: List files in the repository pre checkout
+        run: ls ${{ github.workspace }}
+        
+      - uses: actions/checkout@v3
+      
+      - name: List files in the repository after checkout
+        run: ls ${{ github.workspace }}
