--- a/.github/workflows/showcase.yml
+++ b/.github/workflows/showcase.yml
@@ -11,6 +11,9 @@ jobs:
   explore_github_actions:
     runs-on: ubuntu-latest
     
+    outputs:
+      docker_version: ${{steps.soft_versions.outputs.installed_docker_version}}
+    
     steps:
       - run: echo "Username is ${{github.actor}}"
       
@@ -22,12 +25,14 @@ jobs:
       - run: echo "Event ${{github.event_name}} triggered the workflow"
       
       - name: Runner comes with preinstalled software
+        id: soft_versions
         run: |
           echo "Display software versions"
           git -v
           docker -v
           node -v
           java -version
+          echo "installed_docker_version=$(docker -v)" >> $GITHUB_OUTPUT
           
       - name: List files in the repository pre checkout
         run: ls ${{ github.workspace }}
@@ -40,7 +45,14 @@ jobs:
   display_info:
     runs-on: ubuntu-latest
     
+    needs: explore_github_actions
+    
     steps:
+      - name: display requred job output
+        env:
+          GIVEN_DOCKER_VER: ${{needs.explore_github_actions.outputs.docker_version}}
+        run: echo "given docker is $GIVEN_DOCKER_VER"
+    
       - run: echo "${{github.event.inputs.environment_name}}"     
       
       - name: output workflow execution summary
